# gameclaw

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  README.zh-CN.md  SKILL.md  pyproject.toml
.github/workflows/: release.yml
catalog/: games.json
docs/: agent-coding-standards.md  forge-feedback-log.md  release-flow.md  repository-architecture.md
docs/plans/: 2026-03-12-ai-native-design-rules-migration-plan.md  2026-03-12-ai-native-readme-prompt-plan.md  2026-03-12-bilingual-readme-and-repo-polish-plan.md  2026-03-12-gameclaw-skill-boundary-correction-plan.md  2026-03-12-gameplay-first-design-rules-correction-plan.md  2026-03-12-gdc-game-design-references-plan.md  2026-03-12-gdc-reference-cleanup-plan.md  2026-03-12-github-publication-plan.md  2026-03-12-governance-bootstrap.md  2026-03-12-html-settlement-screen-plan.md  2026-03-12-lobster-memory-correction-plan.md  2026-03-12-lobster-memory-optimization-plan.md  2026-03-12-monorepo-upgrade-plan.md  2026-03-12-one-click-play-prompt-optimization-plan.md  2026-03-12-readme-overhaul-plan.md  2026-03-12-readme-second-pass-and-repo-review-plan.md  2026-03-13-gameclaw-uv-workspace-migration-plan.md  2026-03-13-lobster-cli-heist-plan.md  2026-03-13-lobster-cli-tower-defense-plan.md  2026-03-13-lobster-cli-tower-defense-v0.4.0-expansion-plan.md  2026-03-18-gameclaw-doc-layering-correction-plan.md  2026-03-18-lobster-cli-tamer-plan.md  2026-03-18-root-doc-only-layering-correction-plan.md  2026-03-22-hengzhekan-plan.md  2026-06-02-lobster-cli-tamer-ai-automation-limits.md  2026-06-02-lobster-cli-tamer-ai-easy-mode.md  2026-06-02-lobster-cli-tamer-bugfix-and-unblock.md
docs/references/: ai-native-game-design-rules.md  gdc-game-design-insights.md
games/lobster-cli-heist/: README.md  main.py  pyproject.toml
games/lobster-cli-heist/docs/: distribution.md
games/lobster-cli-heist/game_catalog/: lobster-cli-heist.json
games/lobster-cli-heist/lobster_cli_heist/: content.py  game.py  observer.py  render.py  report.py  simulation.py
games/lobster-cli-heist/scripts/: build-native.sh
games/lobster-cli-heist/tests/: test_game.py  test_observer.py  test_render.py  test_report.py  test_scripted_regression.py
games/lobster-cli-roguelike/: .gitignore  README.md  main.py  pyproject.toml
games/lobster-cli-roguelike/docs/: distribution.md
games/lobster-cli-roguelike/docs/plans/: 2026-03-12-binary-packaging-plan.md  2026-03-12-gameplay-first-optimization-plan.md
games/lobster-cli-roguelike/game_catalog/: lobster-cli-roguelike.json
games/lobster-cli-roguelike/lobster_cli_roguelike/: __init__.py  game.py
games/lobster-cli-roguelike/scripts/: build-native.sh
games/lobster-cli-roguelike/tests/: test_game.py
games/lobster-cli-sideways-look/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
games/lobster-cli-sideways-look/content/cases/: archive-corridor.json  backflow-inn.json  blind-screen-room.json  (+1 more)
games/lobster-cli-sideways-look/game_catalog/: lobster-cli-sideways-look.json
games/lobster-cli-sideways-look/scripts/: build.mjs
games/lobster-cli-sideways-look/src/: cli.tsx  content.ts  engine.ts  model.ts  observer.ts  observerDaemon.ts  render.tsx  report.ts  storage.ts
games/lobster-cli-sideways-look/tests/: cli.test.ts
games/lobster-cli-tamer/: README.md  SKILL.md  lobster-cli-tamer.spec  main.py  pyproject.toml
games/lobster-cli-tamer/data/: affixes.json  balance.json  items.json  tower_config.json  zones.json
games/lobster-cli-tamer/data/skills/: core_named_skills.json  electric_skills.json  poison_skills.json  rock_skills.json  signature_skills.json  spirit_skills.json  tide_skills.json  universal_skills.json
games/lobster-cli-tamer/data/species/: electric_type.json  legendary.json  poison_type.json  rock_type.json  spirit_type.json  tide_type.json
games/lobster-cli-tamer/docs/: 2026-03-19-abyss-drop-tightening-plan.md  2026-03-19-abyss-risk-loop-plan.md  2026-03-19-net-drop-balance-plan.md  2026-03-19-terminal-native-plan.md  bugfix-plan-v0.1.4.md  release-notes-v0.1.5.md  release-notes-v0.1.7.md  release-notes-v0.1.8.md
games/lobster-cli-tamer/game_catalog/: lobster-cli-tamer.json
games/lobster-cli-tamer/lobster_cli_tamer/: __init__.py  affixes.py  capture.py  combat.py  creature.py  game.py  loader.py  observer.py  render.py  report.py  save.py  skills.py  tower.py  workshop.py  world.py
games/lobster-cli-tamer/scripts/: build-native.sh
games/lobster-cli-tamer/tests/: test_abyss_zone_unlock_v027.py  test_ai_easy.py  test_autosave.py  test_battle_dead_cleanup.py  test_combat.py  test_loader.py  test_loot_balance.py  test_potion_main_menu.py  test_reef_shrimp_v026.py  test_save_world.py  test_shield_decay.py  test_swap_menu.py  test_terminal_native_cli.py  test_tower_balance_v025.py  test_tower_workshop.py
games/lobster-cli-tower-defense/: README.md  main.py  pyproject.toml
games/lobster-cli-tower-defense/docs/: distribution.md
games/lobster-cli-tower-defense/game_catalog/: lobster-cli-tower-defense.json
games/lobster-cli-tower-defense/lobster_cli_tower_defense/: __init__.py  content.py  game.py  render.py  report.py  simulation.py  stages.py
games/lobster-cli-tower-defense/scripts/: build-native.sh
games/lobster-cli-tower-defense/tests/: test_game.py  test_render.py  test_report.py  test_scripted_regression.py  test_simulation.py
scripts/: build-game.sh  test-game.sh
(+4 files in other folders)
