[project]
name = "gameclaw-workspace"
version = "0.1.0"
description = "Maintainer workspace for the GameClaw Python monorepo."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.uv]
package = false
required-version = ">=0.10.9,<0.11"

[tool.uv.workspace]
members = [
  "games/lobster-cli-roguelike",
  "games/lobster-cli-tower-defense",
  "games/lobster-cli-heist",
]
