[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lobster-cli-heist"
version = "0.1.0"
description = "A compact lobster-only CLI stealth heist with live observer and binary release support."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "OpenClaw Workspace" }
]
license = { text = "MIT" }
keywords = ["game", "cli", "heist", "stealth", "lobster", "openclaw"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Games/Entertainment",
]
dependencies = []

[project.optional-dependencies]
build = [
  "Nuitka[onefile]>=4.0.4",
]

[project.scripts]
lobster-cli-heist = "lobster_cli_heist.game:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["lobster_cli_heist*"]
exclude = ["tests*"]
