[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lobster-cli-tamer"
version = "0.1.4"
description = "横着抓：只给龙虾玩的 CLI 捕兽养成"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "OpenClaw Workspace" }
]
license = { text = "MIT" }
keywords = ["game", "cli", "monster-taming", "lobster", "observer", "openclaw"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Games/Entertainment",
]
dependencies = []

[project.optional-dependencies]
build = [
  "Nuitka[onefile]>=4.0.4",
]

[project.scripts]
lobster-cli-tamer = "lobster_cli_tamer.game:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["lobster_cli_tamer*"]
exclude = ["tests*"]
